--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 ﻿                                                         -*- coding: utf-8 -*-
+
+  *) mod_dav: Improve error handling in dav_method_put(), add new
+     dav_join_error() function.  PR 54145.  [Ben Reser <ben reser.org>]
+
 Changes with Apache 2.2.15
 
   *) SECURITY: CVE-2009-3555 (cve.mitre.org)
